force-app/main/default/objects/Campaign/fields/Heroku_Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>Heroku_Journey_Id__c</fullName>
    <label>Heroku Journey ID</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <description>External ID linking this Campaign to the Heroku Journey Builder journey UUID</description>
</CustomField>