force-app/main/default/objects/Campaign/fields/Journey_Definition__c.field-meta.xml
<CustomField>
    <fullName>Journey_Definition__c</fullName>
    <label>Journey Definition</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Stores the full React Flow canvas JSON definition from the Journey Builder</description>
</CustomField>