force-app/main/default/objects/Campaign/fields/Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Journey_Status__c</fullName>
    <label>Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Status of the journey associated with this Campaign</description>
</CustomField>